<resources>
    <string name="app_name">CooktailDB</string>
    <string name="title_home">Home</string>
    <string name="title_filter">Filter</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_home_screen">ALL COCKTAIL RECIPES</string>
    <string name="title_ingredient">Ingredients</string>
    <string name="title_instruction">Instruction</string>
    <string name="title_instructions">Instructions</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_youtube">Youtube</string>
    <string name="title_image_source">Image Source</string>
    <string name="title_filter_cocktail">Filter Cocktail</string>
    <string name="title_category">Category</string>
    <string name="title_alcoholic">Alcoholic</string>
    <string name="title_first_letter">First letter</string>
    <string name="title_glass">Glass</string>
    <string name="title_filter_by_category">Filter drink by category: </string>
    <string name="title_filter_by_alcoholic">Filter drink by alcoholic: </string>
    <string name="title_filter_by_glass">Filter drink by glass: </string>
    <string name="title_filter_by_first_letter">Filter drink by first letter: </string>
    <string name="title_filter_dialog">Filter Dialog</string>
    <string name="title_favorite_screen">Favorite Cocktail</string>
    <string name="msg_search_hint">Search cocktail here</string>
    <string name="msg_get_random_cocktail">Get random cocktail</string>
    <string name="msg_get_data_failed">Get data from api failed</string>
    <string name="msg_nothing_found">Nothing found</string>
    <string name="msg_enter_first_letter">Enter first letter</string>
    <string name="msg_filter">Filter</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_enter_letter">You have to enter one letter</string>
    <string name="msg_add_drink_to_favorite">Add drink to favorite</string>
    <string name="msg_delete_drink_from_favorite">Delete drink from favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
