<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_solid_eerieblack_corner_16dp"
    android:layout_margin="@dimen/dp_16"
    android:padding="@dimen/dp_10"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_tile_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:text="@string/title_filter_dialog"
        android:textColor="@color/color_white"
        android:textStyle="bold"
        android:textSize="@dimen/sp_16"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_text_first_letter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/color_white"
        android:hint="@string/msg_enter_first_letter"
        android:background="@drawable/bg_solid_eerieblack_stroke_silversand"
        android:textColorHint="@color/color_silver_sand"
        android:padding="@dimen/dp_10"
        android:inputType="text"
        android:maxLength="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_tile_dialog" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_filter_oke"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msg_filter"
        android:textColor="@color/color_white"
        android:background="@drawable/bg_solid_brown_corner_8dp"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        app:layout_constraintEnd_toStartOf="@+id/button_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_first_letter" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/msg_cancel"
        android:textColor="@color/color_white"
        android:layout_marginStart="@dimen/dp_10"
        android:background="@drawable/bg_solid_onyx_corner_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_filter_oke"
        app:layout_constraintTop_toBottomOf="@id/edit_text_first_letter" />

</androidx.constraintlayout.widget.ConstraintLayout>
