<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_eerie_black"
    tools:context=".ui.filter_fragment.FilterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_solid_eerieblack_corner_16dp_stroke_silversand_1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_filter_cocktail"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_filter_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/title_category"
        android:textColor="@color/color_white"
        android:background="@drawable/bg_solid_eerieblack_corner_16_stroke_silversand"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_filter"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_filter_alcoholic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/title_alcoholic"
        android:background="@drawable/bg_solid_eerieblack_corner_16_stroke_silversand"
        android:textColor="@color/color_white"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_filter"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_filter_first_letter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/title_first_letter"
        android:background="@drawable/bg_solid_eerieblack_corner_16_stroke_silversand"
        android:textColor="@color/color_white"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_filter_category"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_filter_glass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/title_glass"
        android:background="@drawable/bg_solid_eerieblack_corner_16_stroke_silversand"
        android:textColor="@color/color_white"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_filter_category"/>

    <TextView
        android:id="@+id/text_title_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        android:layout_margin="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@id/button_filter_first_letter"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_drink_filter"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_10"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintTop_toBottomOf="@id/text_title_filter"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>

