<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eerie_black"
    android:orientation="vertical"
    tools:context=".ui.home_fragment.HomeFragment">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:text="@string/title_home_screen"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:background="@drawable/bg_solid_silversand_corner_16dp"
        android:drawableStart="@drawable/ic_search"
        android:focusable="false"
        android:hint="@string/msg_search_hint"
        android:padding="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_category"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_eerie_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_search"
        app:tabIndicatorColor="@color/color_medium_purple"
        app:tabMode="scrollable"
        app:tabTextColor="@color/color_white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager2_drink"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_get_random"
        app:layout_constraintTop_toBottomOf="@id/tab_category" />

    <TextView
        android:id="@+id/button_get_random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_solid_eerieblack_stroke_silversand"
        android:drawableStart="@drawable/ic_button_random"
        android:drawablePadding="@dimen/dp_16"
        android:padding="@dimen/dp_8"
        android:text="@string/msg_get_random_cocktail"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
